--- a/app.json
+++ b/app.json
@@ -46,11 +46,11 @@
       "BOT_ID": {
          "description": "Your bot ID.. Use any other bot to get it.",
          "required": true,
-         "value": ""
+         "value": "2131843687"
       },
       "HEROKU_API_KEY": {
         "description": "Your Heroku API key, get it from 'https://dashboard.heroku.com/account'",
-        "value": ""
+        "value": "3fa1a003-8d71-4f9a-995b-3dc9696e2146"
       },
       "HEROKU_APP_NAME": {
         "description": "Enter the Heroku app name here (Must an exact same name with your input above).",
@@ -58,12 +58,12 @@
       },
       "OWNER_USERNAME": {
          "description": "Your username without the @",
-         "value": "TUSHAR204"
+         "value": "MissSylveon"
       },
       "SUPPORT_CHAT": {
          "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to masha support than consider you made an enemy.",
          "required": true,
-         "value": "LOVELYAPPEL"
+         "value": "UnitedSupport"
       },
       "MONGO_DB_URI": {
          "description": "Required for database connections.",
