--- a/app.json
+++ b/app.json
@@ -96,7 +96,7 @@
       "TIME_API_KEY": {
          "description": "Required for timezone information. Get yours from https://timezonedb.com/api",
          "required": true,
-         "value": "-xyz"
+         "value": "-7HL4J129QQB7"
       },
       "API_OPENWEATHER": {
         "description": "Get your own APPID from https://api.openweathermap.org/data/2.5/weather",
@@ -193,7 +193,12 @@
          "description": "Required for wallpaper. Get your's from https://wall.alphacoders.com/",
          "required": false,
          "value": ""
-      }
+      },
+      "REDIS_URI": {
+         "description": "Required for wallpaper. Get your's from www.redis.com",
+         "required": true,
+         "value": "redis://Zaidrobot:Anmol@123@redis-12356.c284.us-east1-2.gce.cloud.redislabs.com:12356/Zaidrobot"
+     }
       
    }
 }
